Program clearly not functioning. literally nothing workingg right now, even the launch command doesn't want to work. Will try again on campus

--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -4,3 +4,15 @@
 
 server.ip=127.0.0.1
 server.port=1234
+world.width=400
+world.height=200
+world.obstacles=3
+visibility=10
+shield.repair.time=5
+weapon.reload.time=3
+max.shield.strength=100
+
+
+obstacle.1=10,10,20,20
+obstacle.2=-30,-30,-10,-10
+obstacle.3=50,50,70,70
